# Catheter-Perception

./: CMakeLists.txt  README.md  catheter_shape_estimates.csv  package.xml  testing.ipynb  webcam_test.py
camera_calibration/: naive_bayes_pixel_classifier.pkl  red_pixel_classifier.pkl  red_pixel_classifier_bgr.pkl
pixel_classification/: RF_2class_GreenWhite_model.pkl  RF_2class_GreenWhite_training_data.pkl  RF_2class_training_data.pkl  RF_3class_GreenPurpleWhite_cam0_model.pkl  RF_3class_GreenPurpleWhite_cam0_training_data.pkl  RF_3class_GreenPurpleWhite_cam1_model.pkl  RF_3class_GreenPurpleWhite_cam2_model.pkl  RF_3class_GreenPurpleWhite_cam2_training_data.pkl  RF_3class_GreenPurpleWhite_model.pkl  RF_3class_GreenPurpleWhite_training_data.pkl  RF_3class_blue_training_data.pkl  RF_3class_purplered_training_data.pkl  RF_3class_training_data.pkl  RF_subtraction_classifier.pkl  pred_results_cam0_0.pkl  pred_results_cam0_1.pkl  pred_results_cam0_2.pkl  pred_results_cam1_0.pkl  pred_results_cam1_1.pkl  pred_results_cam1_2.pkl  rf_2class_model.pkl  rf_3class_blue_model.pkl  rf_3class_model.pkl  rf_3class_purplered_model.pkl  sam_masks_cam0_0.pkl  sam_masks_cam0_1.pkl  sam_masks_cam0_2.pkl  sam_masks_cam1_0.pkl  sam_masks_cam1_1.pkl  sam_masks_cam1_2.pkl
scripts/: camera_calib_data.py  camera_calibration.ipynb  camera_calibration.py  catheter_pose_estimation.ipynb  catheter_pose_estimation.py  catheter_pose_estimator.py  catheter_shape_estimator.py  catheter_shape_estimator_3cam.py  catheter_shape_publisher.py  create_charuco_board.py  extract_rosbag_images.py  testing.ipynb  (+6 more)
(+26 files in other folders)
